apply reviewer notes

--- a/report.html
+++ b/report.html
@@ -12179,19 +12179,16 @@ The purpose of a facial detector to detect features like that. So, if it can det
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Pre-process-the-Data">Pre-process the Data<a class="anchor-link" href="#Pre-process-the-Data">&#182;</a></h3><p>When using TensorFlow as backend, Keras CNNs require a 4D array (which we'll also refer to as a 4D tensor) as input, with shape</p>
-<p>$$
+$$
 (\text{nb_samples}, \text{rows}, \text{columns}, \text{channels}),
-$$</p>
-<p>where <code>nb_samples</code> corresponds to the total number of images (or samples), and <code>rows</code>, <code>columns</code>, and <code>channels</code> correspond to the number of rows, columns, and channels for each image, respectively.</p>
+$$<p>where <code>nb_samples</code> corresponds to the total number of images (or samples), and <code>rows</code>, <code>columns</code>, and <code>channels</code> correspond to the number of rows, columns, and channels for each image, respectively.</p>
 <p>The <code>path_to_tensor</code> function below takes a string-valued file path to a color image as input and returns a 4D tensor suitable for supplying to a Keras CNN.  The function first loads the image and resizes it to a square image that is $224 \times 224$ pixels.  Next, the image is converted to an array, which is then resized to a 4D tensor.  In this case, since we are working with color images, each image has three channels.  Likewise, since we are processing a single image (or sample), the returned tensor will always have shape</p>
-<p>$$
+$$
 (1, 224, 224, 3).
-$$</p>
-<p>The <code>paths_to_tensor</code> function takes a numpy array of string-valued image paths as input and returns a 4D tensor with shape</p>
-<p>$$
+$$<p>The <code>paths_to_tensor</code> function takes a numpy array of string-valued image paths as input and returns a 4D tensor with shape</p>
+$$
 (\text{nb_samples}, 224, 224, 3).
-$$</p>
-<p>Here, <code>nb_samples</code> is the number of samples, or number of images, in the supplied array of image paths.  It is best to think of <code>nb_samples</code> as the number of 3D tensors (where each 3D tensor corresponds to a different image) in your dataset!</p>
+$$<p>Here, <code>nb_samples</code> is the number of samples, or number of images, in the supplied array of image paths.  It is best to think of <code>nb_samples</code> as the number of 3D tensors (where each 3D tensor corresponds to a different image) in your dataset!</p>
 
 </div>
 </div>
@@ -13589,7 +13586,18 @@ Epoch 50/50
 <p><strong>Question 6:</strong> Is the output better than you expected :) ?  Or worse :( ?  Provide at least three possible points of improvement for your algorithm.</p>
 <p><strong>Answer:</strong></p>
 <ul>
-<li>The output is about the same as what I expected. The dog breeds were predicted accurately and human faces were detected. Non-human and non-dog images got an error</li>
+<li><p>The output is about the better than what I expected. The dog breeds were predicted accurately and human faces were detected. Non-human and non-dog images got an error.</p>
+</li>
+<li><p><strong>Improvments</strong>:</p>
+<ul>
+<li><p>Incease the accuracy of the face detector as it sometimes misclassifies dog as humans. In question1, the percent of detected human faces in dog_files_short is 11.0 %. We can use multible OpenCV detectors and combine their results for better human face detection.</p>
+</li>
+<li><p>Enhance dog detector for <em>DOG MUTTS</em>, The algorithm is currently guaranteed to fail for every mixed breed dog.</p>
+</li>
+<li><p>Enhance the returned prediction result as if a returned prediction probability over 95% then it would be approximately proper classification, but when the returned prediction probability is below 50% or somewhat near around,then it should not accept the classification.</p>
+</li>
+</ul>
+</li>
 </ul>
 
 </div>
@@ -14053,6 +14061,19 @@ it  a German_shepherd_dog
 </div>
 </div>
 
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+</div>
 </div>
 </div>
 
